[metadata]
name = DataInspect
version = 0.1.0
author = Dang Phuong Anh
author_email = phuonganhdang2710@gmail.com
description = A package for quick and easy data exploration and inspection
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Phuonganh27/package_project.git
license = MIT

[options]
packages = find:
install_requires =
    pandas>=1.0
    matplotlib>=3.0
    numpy>=1.0

[options.packages.find]
exclude =
    tests

[options.extras_require]
dev =
    pytest>=6.0

[options.entry_points]
console_scripts =
    datainspect = datainspect.main:main

[bdist_wheel]
universal = 1
